tests/snapshots/instas__two_in_one_ts.snap
---
source: tests/instas.rs
expression: v
---
[
    (
        2,
        YAdr {
            date: 2023-11-29,
            title: "2023-11-29 foo-bar also",
            in_context: "<use case/user story u>",
            facing_concern: "<concern c>",
            chosen_option: "<option o>",
            neglected_options: "<other options>",
            to_achieve: "<system qualities/desired consequences>",
            accepted_downsides: "<downside d/undesired consequences>",
            because: "<additional rationale>",
            tail: None,
            changes: [],
        },
    ),
    (
        12,
        YAdr {
            date: 2023-11-30,
            title: "2023-11-30 bar-baz",
            in_context: "<use case/user story u>",
            facing_concern: "<concern c>",
            chosen_option: "<option o>",
            neglected_options: "<other options>",
            to_achieve: "<system qualities/desired consequences>",
            accepted_downsides: "<downside d/undesired consequences>",
            because: "<additional rationale>",
            tail: None,
            changes: [],
        },
    ),
]
