tests/snapshots/instas__with_changes.snap
---
source: tests/instas.rs
expression: v
---
[
    (
        2,
        YAdr {
            date: 2023-11-30,
            title: "2023-11-30 <title>",
            in_context: "<ctx>",
            facing_concern: "<con>",
            chosen_option: "<opt>",
            neglected_options: "<alt>",
            to_achieve: "<qua>",
            accepted_downsides: "<dwn>",
            because: "<why>",
            tail: Some(
                "<tail>",
            ),
            changes: [
                (
                    2023-12-01,
                    "<chg1>",
                ),
                (
                    2023-12-02,
                    "<chg2>",
                ),
                (
                    2023-12-03,
                    "<chg3>",
                ),
            ],
        },
    ),
]
